prodMetadata/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Needs_Acknowledgement_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a donation needs a thank you or other acknowledgement from a staff member within 48 hours, put the staff name here.</description>
        <inlineHelpText>If a donation needs a thank you or other acknowledgement from a staff member within 48 hours, put the staff name here.</inlineHelpText>
        <label>Needs Acknowledgement From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Donation_Thanks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Email__c</fullName>
        <label>On Behalf Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Full_Address__c</fullName>
        <label>On Behalf Full Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Behalf_of_Name__c</fullName>
        <label>On Behalf of Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One2One_Contact_ID_formula__c</fullName>
        <description>To get the Contact ID for reporting purposes on Donation reports that only include Account and not Contact</description>
        <formula>Account.npe01__One2OneContact__c</formula>
        <inlineHelpText>To get the Contact ID for reporting purposes on Donation reports that only include Account and not Contact</inlineHelpText>
        <label>One2One Contact ID formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Opportunity Id 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <description>Org Type of org that owns this donation.</description>
        <formula>text(Account.Type)</formula>
        <inlineHelpText>Org Type of org that owns this donation.</inlineHelpText>
        <label>Org Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Primary_Contact__c</fullName>
        <label>Organization + Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Credit Card (One-Time)</fullName>
                </value>
                <value>
                    <fullName>Credit Card (Recurring)</fullName>
                </value>
                <value>
                    <fullName>Money Order</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_Detail__c</fullName>
        <label>Pipeline Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Strategize</fullName>
                </value>
                <value>
                    <fullName>Inspire</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Submission materials ready</fullName>
                </value>
                <value>
                    <fullName>In process</fullName>
                </value>
                <value>
                    <fullName>Initial background briefing created</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_City__c</fullName>
        <description>Primary City from Contact/Organization</description>
        <formula>Account.BillingCity</formula>
        <inlineHelpText>Primary City from Contact/Organization</inlineHelpText>
        <label>Primary City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_State__c</fullName>
        <formula>Account.BillingState</formula>
        <inlineHelpText>Primary State from Contact/Organization</inlineHelpText>
        <label>Primary State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Street__c</fullName>
        <description>Primary Street Address from Contact/Organization</description>
        <formula>Account.BillingStreet</formula>
        <inlineHelpText>Primary Street Address from Contact/Organization</inlineHelpText>
        <label>Primary Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Zip_Code__c</fullName>
        <description>Primary Zip Code from Contact/Organization</description>
        <formula>Account.BillingPostalCode</formula>
        <inlineHelpText>Primary Zip Code from Contact/Organization</inlineHelpText>
        <label>Primary Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Need Guidance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Segment incorrect</fullName>
                </value>
                <value>
                    <fullName>Campaign Category incorrect</fullName>
                </value>
                <value>
                    <fullName>Contact incorrect</fullName>
                </value>
                <value>
                    <fullName>Org incorrect</fullName>
                </value>
                <value>
                    <fullName>Missing info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Installment_Period__c</fullName>
        <description>If this donation starts a recurring donation, how frequently the donation will recur</description>
        <inlineHelpText>If this donation starts a recurring donation, how frequently the donation will recur</inlineHelpText>
        <label>Recurring Installment Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_auto__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(AccountId)),Account.npo02__OppsClosedLastYear__c &gt; 0),
    true,
    false)</formula>
        <label>Renewal - Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Complete_and_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be checked when grant report is complete and submitted.</description>
        <inlineHelpText>To be checked when grant report is complete and submitted.</inlineHelpText>
        <label>Report Complete and Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Due_Date__c</fullName>
        <label>Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there a report needed for this grant?</description>
        <inlineHelpText>Is there a report needed for this grant?</inlineHelpText>
        <label>Report Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resend_Thanks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend Thanks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Category__c</fullName>
        <label>Source Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Charitable Fund Drive</fullName>
                </value>
                <value>
                    <fullName>Combined Federal Campaign</fullName>
                </value>
                <value>
                    <fullName>Cultivation Event</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Earned Income</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employer Matching</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>In-Kind (non-event)</fullName>
                </value>
                <value>
                    <fullName>Internal to IAVA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Unsolicited</fullName>
                </value>
                <value>
                    <fullName>Year-End Fundraising</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>EOY16_1</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>EOY16_2</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>EOY16_4</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>For the 22+</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Jr.</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Justin</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Michael Carns</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Sean A</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ticket Sales</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>US ARMY</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>USN</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Walter O Estes</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Website</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Details__c</fullName>
        <label>Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if donation is for a sponsorship</description>
        <inlineHelpText>Check if donation is for a sponsorship</inlineHelpText>
        <label>Sponsorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_image__c</fullName>
        <description>Shows a big &quot;CLOSED LOST&quot; image on the Opportunity record is that&apos;s the stage of the opportunity or &quot;TEST&quot; if it&apos;s a test donation.</description>
        <formula>if( ispickval(StageName, &quot;Closed Lost&quot;),  IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001YvqX&quot;, &quot;CLOSED LOST&quot;), 
if( ispickval(StageName, &quot;Pledged&quot;),  IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001ZEaw&quot;, &quot;PLEDGED&quot;), 
if( ispickval(CnP_PaaS__CnP_OrderNumber__r.CnP_PaaS__Transaction_Type__c, &quot;Test&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001ZEac&quot;, &quot;TEST&quot;),&quot;&quot;)
)
)</formula>
        <label>Stage image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_image_small__c</fullName>
        <description>Small version of Stage CLOSED LOST image or TEST image for use in related lists.</description>
        <formula>if( ispickval(StageName, &quot;Closed Lost&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001Yvqm&quot;, &quot;CLOSED LOST&quot;), 
if( ispickval(StageName, &quot;Pledged&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001ZEb6&quot;, &quot;PLEDGED&quot;), 
if( ispickval(CnP_PaaS__CnP_OrderNumber__r.CnP_PaaS__Transaction_Type__c, &quot;Test&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001ZEah&quot;, &quot;TEST&quot;),&quot;&quot;) 
)
)</formula>
        <label>Stage img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starts_a_Recurring_Series__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this is the first in a recurring donation series</description>
        <inlineHelpText>Checked if this is the first in a recurring donation series</inlineHelpText>
        <label>Starts a Recurring Series</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steps__c</fullName>
        <label>Steps</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>AIR</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Initiate Relationship</fullName>
                </value>
                <value>
                    <fullName>Cultivate</fullName>
                </value>
                <value>
                    <fullName>LOI Submitted</fullName>
                </value>
                <value>
                    <fullName>LOI Approved</fullName>
                </value>
                <value>
                    <fullName>Proposal Submitted</fullName>
                </value>
                <value>
                    <fullName>Contract Negotiations</fullName>
                </value>
                <value>
                    <fullName>Contract Executed</fullName>
                </value>
                <value>
                    <fullName>Acknowledgment Letter</fullName>
                </value>
                <value>
                    <fullName>Social Post</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Pledged - Verbal</fullName>
                </value>
                <value>
                    <fullName>Pledged - Written</fullName>
                </value>
                <value>
                    <fullName>Received/Paid</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>LOI Rejected</fullName>
                </value>
                <value>
                    <fullName>Proposal Rejected</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Grant Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppress_Thank_You_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This only works when the record is created. After the record is created, unchecking the box later will not trigger a Thank You email.</inlineHelpText>
        <label>Suppress Thank You Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <description>Donation Processing System</description>
        <inlineHelpText>Donation Processing System</inlineHelpText>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classy</fullName>
                </value>
                <value>
                    <fullName>Click and Pledge</fullName>
                </value>
                <value>
                    <fullName>Crowdrise</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>Fundly</fullName>
                </value>
                <value>
                    <fullName>iBid</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Paypal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Table_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check for table purchase</description>
        <inlineHelpText>Check for table purchase</inlineHelpText>
        <label>Table Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thanks_Sent__c</fullName>
        <label>Thanks Sent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>From Paul</fullName>
                </value>
                <value>
                    <fullName>Thank You Card</fullName>
                </value>
                <value>
                    <fullName>Tax Receipt</fullName>
                </value>
                <value>
                    <fullName>C&amp;P thank you email</fullName>
                </value>
                <value>
                    <fullName>Gala thank you email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Quantity__c</fullName>
        <description>Amount of Tickets Purchased</description>
        <inlineHelpText>If donation is a ticket purchase, enter quantity of tickets</inlineHelpText>
        <label>Ticket Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Code__c</fullName>
        <label>Tracking Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Acknowledgement_Needed__c</fullName>
        <label>Type of Acknowledgement Needed</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c3_c4__c</fullName>
        <label>c3/c4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>c3</fullName>
                </value>
                <value>
                    <fullName>c4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>link_to_budget__c</fullName>
        <label>link to budget</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Outstanding__c</fullName>
        <description>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</description>
        <formula>Amount - NULLVALUE(npe01__Payments_Made__c, 0) - NULLVALUE(npe01__Amount_Written_Off__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Written_Off__c</fullName>
        <description>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</description>
        <inlineHelpText>Value of the payments marked as written-off or noncollectable.</inlineHelpText>
        <label>Payment Writeoff Amount</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Written_Off__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Contact_Id_for_Role__c</fullName>
        <description>System field updated automatically.  Do not use.</description>
        <inlineHelpText>Hidden field for passing a Contact Id for Contact Role creation.</inlineHelpText>
        <label>Contact Id for Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Do_Not_Automatically_Create_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If payments are active, and if this is checked, a new payment will not be automatically created for this Opportunity.</description>
        <inlineHelpText>If payments are active, and if checked, a new payment will not be automatically created for this Opportunity.</inlineHelpText>
        <label>Do Not Automatically Create Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Is_Opp_From_Individual__c</fullName>
        <description>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</description>
        <formula>IF( Account.npe01__SYSTEMIsIndividual__c, &apos;true&apos;, &apos;false&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Opp From Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Member_Level__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <label>Member Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Membership_End_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Origin__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reacquire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Membership_Start_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Number_of_Payments__c</fullName>
        <description>Calculated based on the Payment object.</description>
        <inlineHelpText>Total number of payments for this Opportunity (Donation)</inlineHelpText>
        <label>Number of Payments</label>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Payments_Made__c</fullName>
        <description>The total value of Payments marked as paid for this Opportunity.</description>
        <inlineHelpText>The sum of all payments marked as paid for this Opportunity.</inlineHelpText>
        <label>Payment Amount Received</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__CombinedRollupFieldset__c</fullName>
        <description>Hidden system field, do not add to layouts.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount) + &apos;;|;&apos;+ TEXT(npe01__Member_Level__c) + &apos;;|;&apos;+ TEXT(npe01__Membership_Origin__c) + &apos;;|;&apos; +  Id</formula>
        <inlineHelpText>Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__CurrentGenerators__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <label>Current Generator(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__DeliveryInstallationStatus__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <label>Delivery/Installation Status- DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__MainCompetitors__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <label>Main Competitor(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__OrderNumber__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <label>Order Number - DEPRECATED</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__TrackingNumber__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <label>Tracking Number - DEPRECATED</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__systemHouseholdContactRoleProcessor__c</fullName>
        <description>Hidden system field.  Do not update, updated by automatic process.</description>
        <inlineHelpText>Controls if Household contact roles are created for Opportunities</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD CONTACT ROLEPROCESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Opportunities</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Date__c</fullName>
        <description>The date that you acknowledged this Opportunity.</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Acknowledgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Status__c</fullName>
        <description>The acknowledgement status of this Opportunity. </description>
        <inlineHelpText>Status of Acknowledgment of this gift.</inlineHelpText>
        <label>Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Do Not Acknowledge</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Now</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Ask_Date__c</fullName>
        <description>The date the donor was asked for this Donation. This may be different from the date you received it.</description>
        <inlineHelpText>The date when the donor was specifically asked for the donation, as opposed to the Opportunity Close Date that the organization may set to either when the Opportunity was first created, or when the Opportunity was won.</inlineHelpText>
        <label>Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>